--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,24 +1,42 @@
+body {
+    background: #c31432;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 h1,li {
     font-family: "Coiny", cursive;
 }
 
 h1 {
     text-align: center; 
-    border: 1px solid red;  
-    margin: 0 0; 
-    width: 100%;
+    margin: 0; 
+    padding: 10px 15px;
+    background: #c31432;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+
+
+
 }
 
 input {
     width: 100%;
-    height: 25px;
+    height: 40px;
+    font-size: 15px;
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
-    background-color: #f0f0f5;
+    background-color: #e6e6e6;
 }
+
+input:focus {
+    border: 3px solid #ff3333;
+}
+
 #container {
-    margin: 0 auto;
-    border: 1px solid black;
+    margin: 100px auto;
     width: 360px;
 }
 
@@ -28,9 +46,14 @@ input {
 }
 
 ul {
-    padding-inline-start: 0;
-    list-style-type: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
+
 li {
-    border: 1px solid red;
+    background-color: white;
+}
+li:nth-child(2n) {
+    background-color: #e6e6e6;
 }
